# QuantForge

./: .gitignore  CHANGELOG.md  LICENSE  METHODOLOGY.md  README.md  ROADMAP.md  metrics.py  pyproject.toml
.github/workflows/: ci.yml  daily-health.yml
examples/: quickstart.py
reports/: daily-health.md
src/quantforge/: __init__.py  data.py  metrics.py  simulation.py
tests/: test_data.py  test_metrics.py  test_simulation.py
